fix: [GAMA-417] alignment issue of express nudge on orders page

--- a/src/component/MyAccountOrderView/MyAccountOrderView.style.scss
+++ b/src/component/MyAccountOrderView/MyAccountOrderView.style.scss
@@ -581,7 +581,7 @@
 
     .ExpressDeliveryBlock{
       display: inline-block;
-      margin: 10px;
+      margin: 0 10px;
       vertical-align: middle;
     }
     .ExpressDeliveryTextBlock {
@@ -590,7 +590,6 @@
       align-items: center;
       background: #f964461a;
       border-radius: 10px;
-      margin-top: 10px;
       padding: 5px;
       font-style: italic;
       color: #ff6446;
